--- a/.github/workflows/check_and_deploy.yml
+++ b/.github/workflows/check_and_deploy.yml
@@ -9,8 +9,8 @@ jobs:
       - name: Generate Release APK
         run: ./gradlew assembleRelease
       # 3
-      - name: Sign APK
-        uses: r0adkll/sign-android-release@v1
+      - uses: r0adkll/sign-android-release@v1
+        name: Sign APK
        # ID used to access action output
        id: sign_app
        with:
