--- a/.github/workflows/check_and_deploy.yml
+++ b/.github/workflows/check_and_deploy.yml
@@ -2,7 +2,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      #1
+      # 1
       - name: Checkout code
         uses: actions/checkout@v2
       # 2
@@ -11,11 +11,21 @@ jobs:
       # 3
       - uses: r0adkll/sign-android-release@v1
         name: Sign APK
-       # ID used to access action output
-       id: sign_app
-       with:
-         releaseDirectory: app/build/outputs/apk/release
-         signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-         alias: ${{ secrets.ALIAS }}
-         keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-         keyPassword: ${{ secrets.KEY_PASSWORD }}
+      # ID used to access action output
+      id: sign_app
+      with:
+        releaseDirectory: app/build/outputs/apk/release
+        signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+        alias: ${{ secrets.ALIAS }}
+        keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+        keyPassword: ${{ secrets.KEY_PASSWORD }}
+        # 4
+        - uses: actions/upload-artifact@master
+          with:
+            name: release.apk
+            path: ${{steps.sign_app.outputs.signedReleaseFile}}
+        # 5
+        - uses: actions/upload-artifact@master
+           with:
+            name: mapping.txt
+            path: app/build/outputs/mapping/release/mapping.txt
