--- a/.github/workflows/check_and_deploy.yml
+++ b/.github/workflows/check_and_deploy.yml
@@ -10,21 +10,21 @@ jobs:
         run: ./gradlew assembleRelease
       # 3
       - uses: r0adkll/sign-android-release@v1
-        name: Sign APK
-      id: sign_app
-      with:
-        releaseDirectory: app/build/outputs/apk/release
-        signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-        alias: ${{ secrets.ALIAS }}
-        keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-        keyPassword: ${{ secrets.KEY_PASSWORD }}
-        # 4
-        - uses: actions/upload-artifact@master
-          with:
-            name: release.apk
-            path: ${{steps.sign_app.outputs.signedReleaseFile}}
-        # 5
-        - uses: actions/upload-artifact@master
-           with:
-            name: mapping.txt
-            path: app/build/outputs/mapping/release/mapping.txt
+        name: Sign Apk
+        id: sign_app
+        with:
+          releaseDirectory: app/build/outputs/apk/release
+          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+          alias: ${{ secrets.ALIAS }}
+          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+          keyPassword: ${{ secrets.KEY_PASSWORD }}
+      # 4
+      - uses: actions/upload-artifact@master
+        with:
+          name: release.apk
+          path: ${{steps.sign_app.outputs.signedReleaseFile}}
+      # 5
+      - uses: actions/upload-artifact@master
+        with:
+         name: mapping.txt
+         path: app/build/outputs/mapping/release/mapping.txt
