--- a/.github/workflows/check_and_deploy.yml
+++ b/.github/workflows/check_and_deploy.yml
@@ -1,3 +1,10 @@
+## 1
+name: Test and deploy
+
+## Actions that will be executed when you push code currently none
+on:
+  push:
+
 jobs:
   build:
     runs-on: ubuntu-latest
