--- a/.github/workflows/check_and_deploy.yml
+++ b/.github/workflows/check_and_deploy.yml
@@ -12,6 +12,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       # 2
+      - name: Make gradlew executable
+          run: chmod +x ./gradlew
+
       - name: Generate Release APK
         run: ./gradlew assembleRelease
       # 3
